# gamequeer

./: .clang-format  .gitignore  .python-version  LICENSE  Makefile  README.rst  builder.Dockerfile  clang-format.json  install-node.sh  requirements.txt
.devcontainer/: devcontainer.json
examples/: .gitignore
examples/games/: tutorial_1.gq
game-workspace/assets/lighting/: flash.gqcue  g3.gqcue  g4.gqcue  g5.gqcue  r1g2.gqcue  r1g3.gqcue  r1g4.gqcue  r2g1.gqcue  r2g2.gqcue  r2g3.gqcue  r3.gqcue  r3g1.gqcue  r3g2.gqcue  r4.gqcue  r4g1.gqcue  r5.gqcue  redpulse.gqcue  test.gqcue
game-workspace/games/: queersafe.gq  safe.gq  safe_old.gq  safe_only3.gq  safecracker.gq
gamequeer/: CMakeLists.txt  clang-tidy.json
gamequeer/include/: HAL.h  HAL_emulator.h  gamequeer.h  gamequeer_bytecode.h  gfx.h  grlib_gfx.h
gamequeer/src/: HAL.c  bytecode.c  gamequeer.c  leds.c  main.c  menu.c  oled.c
gamequeer/src/gfx/: gfx.c
gamequeer/src/grlib_gfx_driver/: grlib_gfx_driver.c
gq-game-language/: .gitignore  install-langium-deps.sh  langium-config.json  langium-quickstart.md  language-configuration.json  package-lock.json  package.json
gqc/: pyproject.toml  setup.py
gqc/examples/skel/: Makefile
gqc/examples/skel/assets/lighting/: flash.gqcue  test.gqcue
gqc/examples/skel/games/: sample.gq  sample_working.gq  sample_working_simple.gq
gqc/examples/skel/games/nonworking_samples/: sample_badanim.gq  sample_badfile.gq  sample_duplicate_var.gq
gqc/examples/skel/games/working_samples/: persistent_test.gq  sample_nostages.gq  sample_working.gq  sample_working_simple.gq  tutorial_1.gq
gqc/gqc/: gqc.py  parser.py
gqc/src/gqc/: __init__.py  __main__.py  anim.py  commands.py  cues.py  datamodel.py  gqc.py  grammar.py  grammar_gqcue.py  linker.py  makefile_src.py  parser.py  structs.py
gqc/tests/: context.py  test.py
include/: gamequeer.h  grlib.h
src/: main.c
src/grlib_gfx_driver/: grlib_gfx_driver.c
(+5 files in other folders)
