[build-system]
requires = ["setuptools>=61.0", "click>=8.0", "pyparsing>=3.1", "pytest>=8.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gqc"
version = "0.0.1"
authors = [
  { name="George Louthan", email="duplico@dupli.co" },
]
description = "Gamequeer compiler package"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/duplico/gamequeer"
Issues = "https://github.com/duplico/gamequeer/issues"
